<resources>
    <string name="app_name">Futebola </string>
    <string name="nome">NOME</string>
    <string name="nome_hint">Nome completo</string>
    <string name="telefone">TELEFONE</string>
    <string name="telefone_hint">(xx) xxxxx-xxxx</string>
    <string name="email">E-MAIL</string>
    <string name="email_hint">Usuario@exemplo.com</string>

    <string name="senha">SENHA</string>
    <string name="senha_hint">Crie uma senha</string>
    <string name="senha2">REPETI SENHA</string>
    <string name="senha2_hint">REPETA SUA SENHA</string>

    <string name="endereco">ENDEREÇO</string>
    <string name="endereco_hint">Rua, Av., Beco...</string>
    <string name="cadastrar">CADASTRAR</string>

    <string name="usuarioLogin">Usuário:</string>
    <string name="usuarioLogin_hint">Digite seu email</string>
    <string name="usuarioSenhaLogin">Senha:</string>
    <string name="usuarioSenha_hint">Digite seu senha</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
