<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.futecamp.biel.futecamp.activity.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/fundo" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/usuarioLoginId"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/usuarioLogin"
        android:textColor="#000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/usuarioLoginId"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/senhaLoginId"
        android:layout_alignEnd="@+id/cadastrarUsuarioId"
        android:layout_alignRight="@+id/cadastrarUsuarioId"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/usuarioLogin_hint"
        android:inputType="textPersonName"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="127dp"
        android:layout_toLeftOf="@+id/senhaLoginId"
        android:layout_toStartOf="@+id/senhaLoginId"
        android:text="@string/usuarioSenhaLogin"
        android:textColor="#000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/senhaLoginId"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/botaoEntrarId"
        android:layout_alignStart="@+id/botaoEntrarId"
        android:ems="10"
        android:hint="@string/usuarioSenha_hint"
        android:inputType="textPassword"
        android:textColor="#000" />

    <Button
        android:id="@+id/botaoEntrarId"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senhaLoginId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="Entrar"
        android:textColor="@android:color/background_dark"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/cadastrarUsuarioId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/senhaLoginId"
        android:layout_alignRight="@+id/senhaLoginId"
        android:layout_below="@+id/botaoEntrarId"
        android:layout_marginTop="27dp"
        android:text="Novo no Futebola? Crie uma conta?"
        android:textColor="#000"
        android:textSize="18dp" />


</RelativeLayout>
